--- a/package.json
+++ b/package.json
@@ -16,9 +16,10 @@
     "eject": "react-scripts eject",
     "lint": "eslint src --ext .ts,.tsx,.js,.jsx",
     "lint:fix": "eslint src --ext .ts,.tsx,.js,.jsx --fix",
-    "format": "prettier --write src/**/*.{ts,tsx,js,jsx,css,md,json}",
-    "format:check": "prettier --check src/**/*.{ts,tsx,js,jsx,css,md,json}",
-    "type-check": "tsc --noEmit"
+    "format": "prettier --write \"src/**/*.{ts,tsx,js,jsx,css,md,json}\"",
+    "format:check": "prettier --check \"src/**/*.{ts,tsx,js,jsx,css,md,json}\"",
+    "type-check": "tsc --noEmit",
+    "ci:check": "npm run type-check && npm run lint && npm run format:check && npm run build"
   },
   "eslintConfig": {
     "extends": [
